--- a/操作分布式搜索和分析引擎Elasticsearch/painless脚本/列表.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/painless脚本/列表.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "metadata": {}
    },
    "outputs": [],
    "source": [
@@ -13,27 +14,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
-   ],
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
+    "metadata": {},
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'result': '[1, 4]'}"
+      "text/plain": [
+       "{'result': '[1, 4]'}"
+      ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,18 +60,16 @@
     "        a.remove(0); // 删(根据索引位置)\n",
     "        int first = a.indexOf(\"java\"); // 元素第一次出现的索引位置\n",
     "        int last = a.lastIndexOf(\"java\"); // 元素最后一次出现的索引位置\n",
+    "        \n",
+    "        // 遍历\n",
+    "        for (int i = 0; i < a.length; i++) {\n",
+    "        }\n",
     "        return [first, last]\n",
     "        \"\"\"\n",
     "    }\n",
     "}\n",
     "es.scripts_painless_execute(body=body)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -72,14 +81,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
