--- a/操作分布式搜索和分析引擎Elasticsearch/painless脚本/字典.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/painless脚本/字典.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "metadata": {}
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -35,7 +35,7 @@
        "{'result': '{}'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
@@ -64,7 +64,7 @@
        "{'result': '{a=-1, b=2, c=3, d=4}'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "metadata": {}
    },
@@ -96,7 +96,8 @@
       "{'result': '3'}\n",
       "{'result': '{a=1, b=2, c=3, d=4}'}\n",
       "{'result': '{b=2, c=3}'}\n",
-      "{'result': 'true'}\n"
+      "{'result': 'true'}\n",
+      "{'result': '[a, b, c]'}\n"
      ]
     }
    ],
@@ -139,8 +140,30 @@
     "        return map_b;\n",
     "        \"\"\"\n",
     "    }\n",
+    "}))\n",
+    "\n",
+    "print(es.scripts_painless_execute(body={\n",
+    "    \"script\": {\n",
+    "        \"source\": \"\"\"\n",
+    "        Map map = [\"a\": 1, \"b\": 2, \"c\": 3];\n",
+    "        List map_key = new ArrayList(map.keySet()); \n",
+    "        \n",
+    "        // 遍历\n",
+    "        for (int i = 0; i < map_key.length; i++) {\n",
+    "            int temp = map[map_key[i]];\n",
+    "        }\n",
+    "        return map_key;\n",
+    "        \"\"\"\n",
+    "    }\n",
     "}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
