--- a/操作分布式搜索和分析引擎Elasticsearch/painless脚本/列表.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/painless脚本/列表.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "metadata": {}
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "metadata": {},
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "metadata": {},
@@ -44,7 +44,7 @@
        "{'result': '[1, 4]'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,9 @@
     "body = {\n",
     "    \"script\": {\n",
     "        \"source\": \"\"\"\n",
-    "        List a = [1, 2, \"java\", 3, 4, \"java\"];\n",
+    "        List a_java = new ArrayList();  // 初始化方法一(创建一个空Map)\n",
+    "        List a = [1, 2, \"java\", 3, 4, \"java\"]; // 初始化方法二\n",
+    "\n",
     "        int a_length = a.length; // 列表长度: 5\n",
     "        int one = a[0]; // 索引\n",
     "        a.add(5); // 增\n",
