--- a/操作分布式搜索和分析引擎Elasticsearch/painless脚本/字典.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/painless脚本/字典.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "metadata": {}
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {
     "metadata": {}
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "metadata": {}
    },
@@ -35,7 +35,7 @@
        "{'result': '{}'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "metadata": {}
    },
@@ -64,7 +64,7 @@
        "{'result': '{a=-1, b=2, c=3, d=4}'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "metadata": {}
    },
@@ -147,9 +147,10 @@
     "        \"source\": \"\"\"\n",
     "        Map map = [\"a\": 1, \"b\": 2, \"c\": 3];\n",
     "        List map_key = new ArrayList(map.keySet()); \n",
-    "        \n",
+    "\n",
     "        // 遍历\n",
     "        for (int i = 0; i < map_key.length; i++) {\n",
+    "            String temp_s = map_key[i];\n",
     "            int temp = map[map_key[i]];\n",
     "        }\n",
     "        return map_key;\n",
