--- a/操作向量数据库qdrant/collections0.ipynb
+++ b/操作向量数据库qdrant/collections0.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A collection is a named set of points (vectors with a payload) among which you can search. The vector of each point within the same collection must have the same dimensionality and be compared by a single metric. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -42,6 +49,11 @@
     "        # Size of a vectors used\n",
     "        size=100,\n",
     "        # Type of internal tags, build from payload Distance function types used to compare vectors\n",
+    "        # 可选的值有:\n",
+    "        #   models.Distance.Dot:点积\n",
+    "        #   models.Distance.EUCLID:欧式距离\n",
+    "        #   models.Distance.COSINE:余弦距离\n",
+    "        #   models.Distance.MANHATTAN:曼哈顿距离\n",
     "        distance=models.Distance.COSINE)\n",
     ")"
    ]
