--- a/操作向量数据库qdrant/a_collections/base.ipynb
+++ b/操作向量数据库qdrant/a_collections/base.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CollectionsResponse(collections=[CollectionDescription(name='collection0')])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List all collections\n",
+    "client.get_collections()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -80,28 +101,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CollectionsResponse(collections=[CollectionDescription(name='collection0')])"
+       "{'status': <CollectionStatus.GREEN: 'green'>,\n",
+       " 'optimizer_status': <OptimizersStatusOneOf.OK: 'ok'>,\n",
+       " 'vectors_count': None,\n",
+       " 'indexed_vectors_count': 0,\n",
+       " 'points_count': 0,\n",
+       " 'segments_count': 8,\n",
+       " 'config': CollectionConfig(params=CollectionParams(vectors=VectorParams(size=100, distance=<Distance.COSINE: 'Cosine'>, hnsw_config=None, quantization_config=None, on_disk=None, datatype=None, multivector_config=None), shard_number=1, sharding_method=None, replication_factor=1, write_consistency_factor=1, read_fan_out_factor=None, on_disk_payload=True, sparse_vectors=None), hnsw_config=HnswConfig(m=16, ef_construct=100, full_scan_threshold=10000, max_indexing_threads=0, on_disk=False, payload_m=None), optimizer_config=OptimizersConfig(deleted_threshold=0.2, vacuum_min_vector_number=1000, default_segment_number=0, max_segment_size=None, memmap_threshold=None, indexing_threshold=20000, flush_interval_sec=5, max_optimization_threads=None), wal_config=WalConfig(wal_capacity_mb=32, wal_segments_ahead=0), quantization_config=None),\n",
+       " 'payload_schema': {}}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# List all collections\n",
-    "client.get_collections()"
+    "# Get collection details\n",
+    "dict(client.get_collection(\"collection0\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
