--- a/操作向量数据库qdrant/a_collections/base.ipynb
+++ b/操作向量数据库qdrant/a_collections/base.ipynb
@@ -50,10 +50,10 @@
     "        size=100,\n",
     "        # Type of internal tags, build from payload Distance function types used to compare vectors\n",
     "        # 可选的值有:\n",
-    "        #   models.Distance.Dot:点积\n",
-    "        #   models.Distance.EUCLID:欧式距离\n",
-    "        #   models.Distance.COSINE:余弦距离\n",
-    "        #   models.Distance.MANHATTAN:曼哈顿距离\n",
+    "        #   * models.Distance.Dot:点积\n",
+    "        #   * models.Distance.EUCLID:欧式距离\n",
+    "        #   * models.Distance.COSINE:余弦距离\n",
+    "        #   * models.Distance.MANHATTAN:曼哈顿距离\n",
     "        distance=models.Distance.COSINE)\n",
     ")"
    ]
