--- a/操作向量数据库qdrant/b_points/upsert.ipynb
+++ b/操作向量数据库qdrant/b_points/upsert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "UpdateResult(operation_id=0, status=<UpdateStatus.COMPLETED: 'completed'>)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
     "    # list of objects\n",
     "    points=[\n",
     "        models.PointStruct(\n",
-    "            # Type, used for specifying point ID in user interface \n",
+    "            # Type, used for specifying point ID in user interface\n",
     "            id=1,  # integer OR string\n",
     "            # Payload values (optional)\n",
     "            payload={\n",
@@ -72,20 +72,27 @@
     "            },\n",
     "            vector=[0.3, 0.3, 0.3],\n",
     "        ),\n",
+    "        models.PointStruct(\n",
+    "            id=1,\n",
+    "            payload={\n",
+    "                \"color\": \"yellow\",\n",
+    "            },\n",
+    "            vector=[0.4, 0.4, 0.4],\n",
+    "        ),\n",
     "    ],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=1 payload={'color': 'red'} vector=[0.1, 0.1, 0.1] shard_key=None order_value=None\n",
+      "id=1 payload={'color': 'yellow'} vector=[0.4, 0.4, 0.4] shard_key=None order_value=None\n",
       "id=2 payload={'color': 'green'} vector=[0.2, 0.2, 0.2] shard_key=None order_value=None\n",
       "id=3 payload={'color': 'blue'} vector=[0.3, 0.3, 0.3] shard_key=None order_value=None\n"
      ]
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +120,7 @@
        "UpdateResult(operation_id=0, status=<UpdateStatus.COMPLETED: 'completed'>)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +138,18 @@
     "client.upsert(\n",
     "    collection_name=\"collection1\",\n",
     "    points=models.Batch(\n",
-    "        ids=[1, 2, 3],\n",
+    "        ids=[1, 2, 3, 1],\n",
     "        payloads=[\n",
     "            {\"color\": \"red\"},\n",
     "            {\"color\": \"green\"},\n",
     "            {\"color\": \"blue\"},\n",
+    "            {\"color\": \"yellow\"}\n",
     "        ],\n",
     "        vectors=[\n",
     "            [0.1, 0.1, 0.1],\n",
     "            [0.2, 0.2, 0.2],\n",
     "            [0.3, 0.3, 0.3],\n",
+    "            [0.4, 0.4, 0.4],\n",
     "        ],\n",
     "    ),\n",
     ")"
@@ -148,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=1 payload={'color': 'red'} vector=[0.1, 0.1, 0.1] shard_key=None order_value=None\n",
+      "id=1 payload={'color': 'yellow'} vector=[0.4, 0.4, 0.4] shard_key=None order_value=None\n",
       "id=2 payload={'color': 'green'} vector=[0.2, 0.2, 0.2] shard_key=None order_value=None\n",
       "id=3 payload={'color': 'blue'} vector=[0.3, 0.3, 0.3] shard_key=None order_value=None\n"
      ]
