--- a/操作向量数据库qdrant/b_points/upset_multiple_vectors.ipynb
+++ b/操作向量数据库qdrant/b_points/upset_multiple_vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "UpdateResult(operation_id=0, status=<UpdateStatus.COMPLETED: 'completed'>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,9 +77,15 @@
     "        ),\n",
     "        models.PointStruct(\n",
     "            id=2,\n",
+    "            # Named vectors are optional. When uploading points, some vectors may be omitted. For example, you can upload one point with only the image vector and a second one with only the text vector.\n",
+    "            vector={\n",
+    "                \"text\": [0.5, 0.2, 0.7, 0.4, 0.7, 0.2, 0.3, 0.9],\n",
+    "            },\n",
+    "        ),\n",
+    "        models.PointStruct(\n",
+    "            id=3,\n",
     "            vector={\n",
     "                \"image\": [0.2, 0.1, 0.3, 0.9],\n",
-    "                \"text\": [0.5, 0.2, 0.7, 0.4, 0.7, 0.2, 0.3, 0.9],\n",
     "            },\n",
     "        ),\n",
     "    ],\n",
@@ -88,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +102,8 @@
      "output_type": "stream",
      "text": [
       "id=1 payload={} vector={'text': [0.2715377, 0.47519097, 0.06788442, 0.5430754, 0.06788442, 0.06788442, 0.6109598, 0.13576885], 'image': [0.9, 0.1, 0.1, 0.2]} shard_key=None order_value=None\n",
-      "id=2 payload={} vector={'text': [0.3247849, 0.12991396, 0.45469886, 0.2598279, 0.45469886, 0.12991396, 0.19487095, 0.5846128], 'image': [0.2, 0.1, 0.3, 0.9]} shard_key=None order_value=None\n"
+      "id=2 payload={} vector={'text': [0.3247849, 0.12991396, 0.45469886, 0.2598279, 0.45469886, 0.12991396, 0.19487095, 0.5846128]} shard_key=None order_value=None\n",
+      "id=3 payload={} vector={'image': [0.2, 0.1, 0.3, 0.9]} shard_key=None order_value=None\n"
      ]
     }
    ],
@@ -110,20 +117,6 @@
     ")[0]:\n",
     "    print(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
