--- a/操作向量数据库qdrant/b_points/更新+插入+批量_upload_xxx.ipynb
+++ b/操作向量数据库qdrant/b_points/更新+插入+批量_upload_xxx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +58,19 @@
     "    vectors_config=models.VectorParams(size=3, distance=models.Distance.DOT),\n",
     ")\n",
     "\n",
+    "# Upload vectors and payload to the collection. This method will perform automatic batching of the data.\n",
     "client.upload_collection(\n",
     "    collection_name=\"collection0\",\n",
-    "    ids=[1, 2],\n",
+    "    ids=[1, 2, 1],\n",
     "    payload=[\n",
     "        {\"color\": \"red\"},\n",
     "        {\"color\": \"green\"},\n",
+    "        {\"color\": \"yellow\"},\n",
     "    ],\n",
     "    vectors=[\n",
     "        [0.9, 0.1, 0.1],\n",
     "        [0.1, 0.9, 0.1],\n",
+    "        [0.2, 0.2, 0.2],\n",
     "    ],\n",
     "    # How many vectors upload per-request, Default: 64\n",
     "    batch_size=64,\n",
@@ -80,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=1 payload={'color': 'red'} vector=[0.9, 0.1, 0.1] shard_key=None order_value=None\n",
+      "id=1 payload={'color': 'yellow'} vector=[0.2, 0.2, 0.2] shard_key=None order_value=None\n",
       "id=2 payload={'color': 'green'} vector=[0.1, 0.9, 0.1] shard_key=None order_value=None\n"
      ]
     }
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,6 +138,13 @@
     "            },\n",
     "            vector=[0.1, 0.9, 0.1],\n",
     "        ),\n",
+    "        models.PointStruct(\n",
+    "            id=1,\n",
+    "            payload={\n",
+    "                \"color\": \"yellow\",\n",
+    "            },\n",
+    "            vector=[0.2, 0.2, 0.2],\n",
+    "        ),\n",
     "    ],\n",
     "    batch_size=64,\n",
     "    parallel=4,\n",
@@ -144,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=1 payload={'color': 'red'} vector=[0.9, 0.1, 0.1] shard_key=None order_value=None\n",
+      "id=1 payload={'color': 'yellow'} vector=[0.2, 0.2, 0.2] shard_key=None order_value=None\n",
       "id=2 payload={'color': 'green'} vector=[0.1, 0.9, 0.1] shard_key=None order_value=None\n"
      ]
     }
