进一步学习

--- a/操作向量数据库qdrant/c_filtering/b_filtering_conditions/Matchxxx.ipynb
+++ b/操作向量数据库qdrant/c_filtering/b_filtering_conditions/Matchxxx.ipynb
@@ -92,7 +92,7 @@
     "        must=[\n",
     "            models.FieldCondition(\n",
     "                key=\"color\",\n",
-    "                # exact match of the given value\n",
+    "                # The simplest kind of condition is one that checks if the stored value equals the given one. If several values are stored, at least one of them should match the condition.\n",
     "                match=models.MatchValue(value=\"red\"),  # 用于关键字、整数、布尔值\n",
     "            )\n",
     "        ]\n",
