向量学习完毕

--- a/操作向量数据库qdrant/b_points/根据id检索points_retrieve.ipynb
+++ b/操作向量数据库qdrant/b_points/根据id检索points_retrieve.ipynb
@@ -93,11 +93,11 @@
     "    # If `False` - do not attach any payload\n",
     "    # If List of string - include only specified fields\n",
     "    # If `PayloadSelector` - use explicit rules\n",
-    "    with_payload=True,\n",
+    "    with_payload=True,  # 默认with_payload=True\n",
     "    # If `True` - Attach stored vector to the search result.\n",
     "    # If `False` - Do not attach vector.\n",
     "    # If List of string - Attach only specified vectors.\n",
-    "    with_vectors=True\n",
+    "    with_vectors=True  # 默认with_vectors=False\n",
     ")"
    ]
   }
