--- a/操作向量数据库qdrant/a_collections/multiple_vectors.ipynb
+++ b/操作向量数据库qdrant/a_collections/multiple_vectors.ipynb
@@ -43,6 +43,7 @@
     "client.create_collection(\n",
     "    collection_name=\"collection0\",\n",
     "    vectors_config={\n",
+    "        # Each of these vectors should have a unique configuration and should be addressed by a unique name.\n",
     "        \"image\": models.VectorParams(size=4, distance=models.Distance.DOT),\n",
     "        \"text\": models.VectorParams(size=8, distance=models.Distance.COSINE),\n",
     "    },\n",
