--- a/操作向量数据库qdrant/c_filtering/a_filtering_clauses/clauses_combination.ipynb
+++ b/操作向量数据库qdrant/c_filtering/a_filtering_clauses/clauses_combination.ipynb
@@ -89,7 +89,7 @@
     "# 多个子句(In this case, the conditions are combined by AND.)\n",
     "client.scroll(\n",
     "    collection_name=\"collection0\",\n",
-    "    # (city=\"London\") and (not color='red')\n",
+    "    # 过滤条件为:(city=\"London\") and (not color='red')\n",
     "    scroll_filter=models.Filter(\n",
     "        must=[\n",
     "            models.FieldCondition(key=\"city\", match=models.MatchValue(value=\"London\")),\n",
@@ -126,8 +126,8 @@
     "# 递归嵌套\n",
     "client.scroll(\n",
     "    collection_name=\"collection0\",\n",
+    "    # 过滤条件为:not((city=\"London\") and (color='red'))\n",
     "    scroll_filter=models.Filter(\n",
-    "        # not((city=\"London\") and (color='red'))\n",
     "        must_not=[\n",
     "            models.Filter(\n",
     "                must=[\n",
