批次查询学习

--- a/操作向量数据库qdrant/d_similarity_search/search.ipynb
+++ b/操作向量数据库qdrant/d_similarity_search/search.ipynb
@@ -105,7 +105,8 @@
     "        exact=False\n",
     "        ),\n",
     "    query_vector=[0.2, 0.1, 0.9, 0.7],\n",
-    "    limit=3,\n",
+    "    # Max number of result to return\n",
+    "    limit=3,  # 默认limit=10\n",
     "    # If `True` - attach all payload\n",
     "    # If `False` - do not attach any payload\n",
     "    # If List of string - include only specified fields\n",
