--- a/操作向量数据库qdrant/d_similarity_search/search.ipynb
+++ b/操作向量数据库qdrant/d_similarity_search/search.ipynb
@@ -99,9 +99,9 @@
     "        ]\n",
     "    ),\n",
     "    search_params=models.SearchParams(\n",
-    "        # value that specifies ef parameter of the HNSW algorithm.\n",
+    "        # Params relevant to HNSW index Size of the beam in a beam-search. Larger the value - more accurate the result, more time required for search.\n",
     "        hnsw_ef=128, \n",
-    "        # option to not use the approximate search (ANN). If set to true, the search may run for a long as it performs a full scan to retrieve exact results.\n",
+    "        # Search without approximation. If set to true, search may run long but with exact results.\n",
     "        exact=False\n",
     "        ),\n",
     "    query_vector=[0.2, 0.1, 0.9, 0.7],\n",
