--- a/操作分布式搜索和分析引擎Elasticsearch/索引/分词器2custom_ik.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/分词器2custom_ik.ipynb
@@ -14,24 +14,41 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'tokens': [{'token': '轻度',\n   'start_offset': 0,\n   'end_offset': 2,\n   'type': 'CN_WORD',\n   'position': 0},\n  {'token': '脂肪肝',\n   'start_offset': 2,\n   'end_offset': 5,\n   'type': 'CN_WORD',\n   'position': 1}]}"
+      "text/plain": [
+       "{'tokens': [{'token': '轻度',\n",
+       "   'start_offset': 0,\n",
+       "   'end_offset': 2,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 0},\n",
+       "  {'token': '脂肪肝',\n",
+       "   'start_offset': 2,\n",
+       "   'end_offset': 5,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 1}]}"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -49,21 +66,42 @@
     "es.indices.analyze(\n",
     "    body={\"analyzer\": \"ik_smart\",  # 细粒度\n",
     "          \"text\": \"轻度脂肪肝\"})"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'tokens': [{'token': '轻度',\n   'start_offset': 0,\n   'end_offset': 2,\n   'type': 'CN_WORD',\n   'position': 0},\n  {'token': '脂肪肝',\n   'start_offset': 2,\n   'end_offset': 5,\n   'type': 'CN_WORD',\n   'position': 1},\n  {'token': '脂肪',\n   'start_offset': 2,\n   'end_offset': 4,\n   'type': 'CN_WORD',\n   'position': 2},\n  {'token': '肝',\n   'start_offset': 4,\n   'end_offset': 5,\n   'type': 'CN_CHAR',\n   'position': 3}]}"
+      "text/plain": [
+       "{'tokens': [{'token': '轻度',\n",
+       "   'start_offset': 0,\n",
+       "   'end_offset': 2,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 0},\n",
+       "  {'token': '脂肪肝',\n",
+       "   'start_offset': 2,\n",
+       "   'end_offset': 5,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 1},\n",
+       "  {'token': '脂肪',\n",
+       "   'start_offset': 2,\n",
+       "   'end_offset': 4,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 2},\n",
+       "  {'token': '肝',\n",
+       "   'start_offset': 4,\n",
+       "   'end_offset': 5,\n",
+       "   'type': 'CN_CHAR',\n",
+       "   'position': 3}]}"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -74,21 +112,47 @@
     "es.indices.analyze(\n",
     "    body={\"analyzer\": \"ik_max_word\",  # 粗粒度\n",
     "          \"text\": \"轻度脂肪肝\"})"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'tokens': [{'token': '冠状动脉',\n   'start_offset': 0,\n   'end_offset': 4,\n   'type': 'CN_WORD',\n   'position': 0},\n  {'token': '冠状',\n   'start_offset': 0,\n   'end_offset': 2,\n   'type': 'CN_WORD',\n   'position': 1},\n  {'token': '动脉',\n   'start_offset': 2,\n   'end_offset': 4,\n   'type': 'CN_WORD',\n   'position': 2},\n  {'token': '壁',\n   'start_offset': 4,\n   'end_offset': 5,\n   'type': 'CN_CHAR',\n   'position': 3},\n  {'token': '钙化',\n   'start_offset': 5,\n   'end_offset': 7,\n   'type': 'CN_WORD',\n   'position': 4}]}"
+      "text/plain": [
+       "{'tokens': [{'token': '冠状动脉',\n",
+       "   'start_offset': 0,\n",
+       "   'end_offset': 4,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 0},\n",
+       "  {'token': '冠状',\n",
+       "   'start_offset': 0,\n",
+       "   'end_offset': 2,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 1},\n",
+       "  {'token': '动脉',\n",
+       "   'start_offset': 2,\n",
+       "   'end_offset': 4,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 2},\n",
+       "  {'token': '壁',\n",
+       "   'start_offset': 4,\n",
+       "   'end_offset': 5,\n",
+       "   'type': 'CN_CHAR',\n",
+       "   'position': 3},\n",
+       "  {'token': '钙化',\n",
+       "   'start_offset': 5,\n",
+       "   'end_offset': 7,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 4}]}"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -124,21 +188,42 @@
     "es.indices.analyze(\n",
     "    body={\"analyzer\": \"ik_max_word\",\n",
     "          \"text\": \"冠状动脉壁钙化\"})"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'tokens': [{'token': '左眼',\n   'start_offset': 0,\n   'end_offset': 2,\n   'type': 'CN_WORD',\n   'position': 0},\n  {'token': '屈',\n   'start_offset': 2,\n   'end_offset': 3,\n   'type': 'CN_CHAR',\n   'position': 1},\n  {'token': '光',\n   'start_offset': 3,\n   'end_offset': 4,\n   'type': 'CN_CHAR',\n   'position': 2},\n  {'token': '不正',\n   'start_offset': 4,\n   'end_offset': 6,\n   'type': 'CN_WORD',\n   'position': 3}]}"
+      "text/plain": [
+       "{'tokens': [{'token': '左眼',\n",
+       "   'start_offset': 0,\n",
+       "   'end_offset': 2,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 0},\n",
+       "  {'token': '屈',\n",
+       "   'start_offset': 2,\n",
+       "   'end_offset': 3,\n",
+       "   'type': 'CN_CHAR',\n",
+       "   'position': 1},\n",
+       "  {'token': '光',\n",
+       "   'start_offset': 3,\n",
+       "   'end_offset': 4,\n",
+       "   'type': 'CN_CHAR',\n",
+       "   'position': 2},\n",
+       "  {'token': '不正',\n",
+       "   'start_offset': 4,\n",
+       "   'end_offset': 6,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 3}]}"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -149,21 +234,52 @@
     "es.indices.analyze(\n",
     "    body={\"analyzer\": \"ik_smart\",\n",
     "          \"text\": \"左眼屈光不正\"})"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'tokens': [{'token': '甲状腺',\n   'start_offset': 0,\n   'end_offset': 3,\n   'type': 'CN_WORD',\n   'position': 0},\n  {'token': '体积',\n   'start_offset': 3,\n   'end_offset': 5,\n   'type': 'CN_WORD',\n   'position': 1},\n  {'token': '稍大',\n   'start_offset': 5,\n   'end_offset': 7,\n   'type': 'CN_WORD',\n   'position': 2},\n  {'token': '回声',\n   'start_offset': 8,\n   'end_offset': 10,\n   'type': 'CN_WORD',\n   'position': 3},\n  {'token': '欠',\n   'start_offset': 10,\n   'end_offset': 11,\n   'type': 'CN_CHAR',\n   'position': 4},\n  {'token': '均匀',\n   'start_offset': 11,\n   'end_offset': 13,\n   'type': 'CN_WORD',\n   'position': 5}]}"
+      "text/plain": [
+       "{'tokens': [{'token': '甲状腺',\n",
+       "   'start_offset': 0,\n",
+       "   'end_offset': 3,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 0},\n",
+       "  {'token': '体积',\n",
+       "   'start_offset': 3,\n",
+       "   'end_offset': 5,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 1},\n",
+       "  {'token': '稍大',\n",
+       "   'start_offset': 5,\n",
+       "   'end_offset': 7,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 2},\n",
+       "  {'token': '回声',\n",
+       "   'start_offset': 8,\n",
+       "   'end_offset': 10,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 3},\n",
+       "  {'token': '欠',\n",
+       "   'start_offset': 10,\n",
+       "   'end_offset': 11,\n",
+       "   'type': 'CN_CHAR',\n",
+       "   'position': 4},\n",
+       "  {'token': '均匀',\n",
+       "   'start_offset': 11,\n",
+       "   'end_offset': 13,\n",
+       "   'type': 'CN_WORD',\n",
+       "   'position': 5}]}"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -174,13 +290,7 @@
     "es.indices.analyze(\n",
     "    body={\"analyzer\": \"ik_smart\",\n",
     "          \"text\": \"甲状腺体积稍大，回声欠均匀\"})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -199,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
