继续大规模完善

--- a/python并发编程/testx/test.ipynb
+++ b/python并发编程/testx/test.ipynb
@@ -2,13 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utily import pool_computer\n",
+    "from utily import process_computer\n",
     "\n",
-    "_ = pool_computer()"
+    "_ = process_computer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utily import thread_computer\n",
+    "\n",
+    "_ = thread_computer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9959232807159424"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from utily import async_computer\n",
+    "import asyncio\n",
+    "\n",
+    "\n",
+    "xx = await async_computer()\n",
+    "xx"
    ]
   }
  ],
